# fullbleed-official

./: .gitignore  AI.md  COPYRIGHT  Cargo.toml  FONT_LICENSE_AUDIT.json  LICENSING.md  README.md  ReleaseNotes.MD  THIRD_PARTY_LICENSES.md  _tmp_text.txt  _tmp_text_955.txt  accessibility_audit.md  audit_remediation_sprint.md  backlog.md  cli_schema.md  core_research.md  dev_hygenie.py  fullbleed_preflight.jit  fullbleed_preflight.perf  handoff.md  image_and_perf.md  image_and_perf_worklog.md  llm.txt  local_manifest_remote_smoke.json  native_pdf_raster_sprint.md  paged_media_ranker.md  paged_overflow_integrity_sprint.md  pdf_ua_sprint.md  pyproject.toml  scafold_engine_review.md
.github/workflows/: build_wheels.yml  ci.yml
_css_working/: css_broad_coverage_sprint_s14.md  css_epoc.md  css_fixture_report.json  css_fixture_report_rotate_var_targeted.json  css_fixture_report_targeted.json  css_fixture_report_transform_var_fallback_cycle_targeted.json  css_fixture_report_transform_var_longhands_targeted.json  css_mdn_inventory_snapshot.md  css_parity_ledger.json  css_parity_spint.md
_css_working/fixtures/: background_conic_gradient_supported_quadrants.json  borders_left_color_override.json  borders_uniform_frame_paint_matrix.json  box_shadow_negative_spread_offset_paints_shrunk_shadow.json  custom_property_calc_var_additive_mixed_lengths.json  custom_property_calc_var_percent_width.json  custom_property_fallback_chain.json  custom_property_length_chain_fallback.json  custom_property_math_min_max_clamp_lengths.json  diagnostics_conic_gradient_fallback_no_color.json  diagnostics_conic_gradient_fallback_with_color.json  diagnostics_filters_effects_fallback.json  diagnostics_multicol_single_column_fallback.json  diagnostics_unsupported_media_and_no_effect.json  flex_align_content_flex_end_wrap.json  flex_align_self_item_override.json  flex_flow_row_wrap_layout.json  flex_place_content_flex_end_center_wrap.json  flex_place_items_container_alignment.json  flex_place_self_item_override.json  flex_two_column_distribution.json  fragmentation_break_inside_avoid_block.json  fragmentation_long_paragraph.json  gap_row_column_var_resolution.json  grid_conflicting_explicit_slots_fall_forward.json  grid_explicit_row_column_starts.json  grid_rows_only_column_derivation.json  grid_template_rows_columns_matrix.json  inheritance_unset_noninherited_resets.json  inset_left_var_resolution.json  logical_inline_block_size_min_max.json  logical_inset_horizontal_tb_ltr.json  logical_margin_padding_horizontal_tb_ltr.json  overflow_hidden_clips_absolute_child.json  overflow_visible_allows_absolute_bleed.json  paged_break_before_forced_block.json  position_absolute_auto_inset_static_position_fallback.json  position_absolute_empty_box_background.json  position_absolute_explicit_width_overflow_no_clamp.json  position_absolute_initial_containing_block_from_static_parent.json  (+45 more)
_css_working/tmp/: empty_div_perf.jsonl  fixture_diag_filters_latest.json  fixture_full_latest.json  full_run_debug.json  tmp_absolute_overconstrained_size_precedence.json
crates/fullbleed_audit_contract/: Cargo.toml
crates/fullbleed_audit_contract/specs/: fullbleed.audit_registry.v1.yaml
crates/fullbleed_audit_contract/src/: lib.rs
docs/: README.md  cli.md  css-coverage.md  engine.md  install-non-technical.md  pdf-templates.md  python-api.md  ui-accessibility.md
docs/specs/: accessibility-claim-language.md  fullbleed.a11y.verify.v1.schema.json  fullbleed.audit_registry.v1.yaml  fullbleed.pmr.v1.schema.json  section508_html_coverage_matrix.md  section508_html_registry.v1.yaml  wcag20aa_coverage_matrix.md  wcag20aa_registry.v1.yaml
examples/_accessibility_examples/: README.md
examples/acme_invoice/: COMPLIANCE.md  README.md  report.py
examples/bank_statement/: README.md  SCAFFOLDING.md  (+1 more)
goldens/: README.md  run_golden_suite.py
output/: css_parity_status.ci.linux.json  engine_api_render_file.sha256
src/: assets.rs  canvas.rs  debug.rs  doc_context.rs  doc_template.rs  error.rs  finalize.rs  flate_native.rs  flowable.rs  font.rs  frame.rs  glyph_report.rs  html.rs  jit.rs  lib.rs  metrics.rs  page_data.rs  page_template.rs  pdf.rs  pdf_raster.rs  pdfinspect.rs  perf.rs  plan.rs  python.rs  raster.rs  spill.rs  style.rs  svg.rs  types.rs
templates/: invoice.css
tests/: conftest.py  test_accessibility_audit_prototype.py  test_accessibility_audit_specs.py  test_audit_contract_runtime.py  test_escambia_sqlite_ledger_api.py  test_fullbleed_accessibility_runtime.py  test_fullbleed_engine_accessibility_verifier.py  test_fullbleed_engine_emitters.py  test_fullbleed_engine_pmr.py  test_fullbleed_ui_accessibility.py  test_fullbleed_ui_cav.py  test_fullbleed_ui_core.py  test_fullbleed_ui_primitives.py  test_fullbleed_ui_style.py  test_scaffold_accessible_template.py  test_scaffold_basic_template_metadata.py
tools/: audit_font_licenses.py  capture_audit_baseline.py  check_license_integrity.py  generate_css_parity_status.py  run_css_fixture_pipeline.ps1  run_css_fixture_suite.py
(+358 files in other folders)
