[package]
name = "fullbleed"
version = "0.1.12"
edition = "2024"
license = "AGPL-3.0-only"
description = "Deterministic, dependency-free HTML/CSS-to-PDF engine in Rust for transactional document generation and AI agent workflows."
repository = "https://github.com/fullbleed-engine/fullbleed-official"
homepage = "https://fullbleed.dev"
documentation = "https://github.com/fullbleed-engine/fullbleed-official#readme"
readme = "README.md"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
python = ["pyo3"]
svg_raster = ["resvg"]

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
kuchiki = "0.8.1"
lightningcss = "1.0.0-alpha.70"
ttf-parser = "0.20.0"
pyo3 = { version = "0.21.2", optional = true, features = ["extension-module"] }
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }
flate2 = "1.0.30"
base64 = "0.22.1"
rayon = "1.10.0"
roxmltree = "0.20.0"
resvg = { version = "0.39.0", optional = true }
rustybuzz = "0.14.1"
fixed = "1.29"
libm = "0.2"
tiny-skia = "0.11.4"
