[package]
name = "fullbleed"
version = "0.6.5"
edition = "2024"
license = "AGPL-3.0-only"
description = "Deterministic, dependency-free HTML/CSS-to-PDF engine in Rust for transactional document generation and AI agent workflows."
repository = "https://github.com/fullbleed-engine/fullbleed-official"
homepage = "https://fullbleed.dev"
documentation = "https://github.com/fullbleed-engine/fullbleed-official#readme"
readme = "README.md"
include = [
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "COPYRIGHT",
    "THIRD_PARTY_LICENSES.md",
    "src/**",
]

[lib]
crate-type = ["rlib", "cdylib"]

[features]
python = ["pyo3"]
svg_raster = ["resvg"]

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
fullbleed_audit_contract = { path = "crates/fullbleed_audit_contract" }
kuchiki = "0.8.1"
lightningcss = "1.0.0-alpha.70"
ttf-parser = "0.20.0"
pyo3 = { version = "0.21.2", optional = true, features = ["extension-module"] }
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22.1"
rayon = "1.10.0"
roxmltree = "0.20.0"
resvg = { version = "0.39.0", optional = true }
rustybuzz = "0.14.1"
fixed = "1.29"
libm = "0.2"
tiny-skia = "0.11.4"
lopdf = "0.35.0"
sha2 = "0.10.8"
